--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
-.DS_Store
-node_modules
 *.log
+*.lock
+
+.DS_Store
 .idea
 .vscode
 .history
-examples/moddef.json
-bin
+
 anonymous_token
+bin
+examples/moddef.json
+node_modules
