--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "NeteaseCloudMusicApi",
+  "name": "vmmusicapi",
   "version": "4.13.2",
   "description": "网易云音乐 NodeJS 版 API",
   "scripts": {
